<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:background="@color/black_buttons"
    android:layout_height="wrap_content">

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="6"
        android:rowCount="5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
        <!--Primera fila -->
        <Button
            android:id="@+id/btnClear"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_row="0"
            android:layout_column="0"
            android:elevation="0dp"
            android:layout_columnWeight="1"
            android:text="@string/c"
            android:textColor="@color/white"
            android:textSize="25sp"
            app:backgroundTint="@color/black_buttons" />

        <Button
            android:id="@+id/btnBrackets"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_row="0"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:text="@string/bracket_button"
            android:elevation="0dp"
            android:textColor="@color/white"
            android:textSize="25sp"
            app:backgroundTint="@color/black_buttons" />

        <Button
            android:id="@+id/btnPercent"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_row="0"
            android:layout_column="2"
            android:layout_columnWeight="1"
            android:text="@string/percent_button"
            android:elevation="0dp"
            android:textColor="@color/white"
            android:textSize="25sp"
            app:backgroundTint="@color/black_buttons" />

        <Button
            android:id="@+id/btnDivision"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_row="0"
            android:layout_column="4"
            android:elevation="0dp"
            android:layout_columnWeight="1"
            android:text="@string/divide_button"
            android:textColor="@color/white"
            android:textSize="25sp"
            app:backgroundTint="@color/black_buttons" />

        <!--Segunda fila -->

        <Button
            android:id="@+id/btn7"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_row="1"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:text="@string/buttonseven"
            android:textColor="@color/white"
            android:textSize="25sp"
            app:backgroundTint="@color/black_buttons" />

        <Button
            android:id="@+id/btn8"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_row="1"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:text="@string/buttoneight"
            android:textColor="@color/white"
            android:textSize="25sp"
            app:backgroundTint="@color/black_buttons" />

        <Button
            android:id="@+id/btn9"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_row="1"
            android:layout_column="2"
            android:layout_columnWeight="1"
            android:text="@string/buttonnine"
            android:textColor="@color/white"
            android:textSize="25sp"
            app:backgroundTint="@color/black_buttons" />

        <Button
            android:id="@+id/btnmultiply"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_row="1"
            android:layout_column="4"
            android:layout_columnWeight="1"
            android:text="@string/button_multi"
            android:textColor="@color/white"
            android:textSize="25sp"
            app:backgroundTint="@color/black_buttons" />

        <!--Tercera fila -->
        <Button
            android:id="@+id/btn4"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_row="2"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:text="@string/buttonfour"
            android:textColor="@color/white"
            android:textSize="25sp"
            app:backgroundTint="@color/black_buttons" />

        <Button
            android:id="@+id/btn5"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_row="2"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:text="@string/button_five"
            android:textColor="@color/white"
            android:textSize="25sp"
            app:backgroundTint="@color/black_buttons" />

        <Button
            android:id="@+id/btn6"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_row="2"
            android:layout_column="2"
            android:layout_columnWeight="1"
            android:text="@string/button_Six"
            android:textColor="@color/white"
            android:textSize="25sp"
            app:backgroundTint="@color/black_buttons" />

        <Button
            android:id="@+id/btnRest"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_row="2"
            android:layout_column="4"
            android:layout_columnWeight="1"
            android:text="@string/button_Rest"
            android:textColor="@color/white"
            android:textSize="25sp"
            app:backgroundTint="@color/black_buttons" />

        <!--Cuarta fila -->
        <Button
            android:id="@+id/btn1"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_row="3"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:text="@string/button_one"
            android:textColor="@color/white"
            android:textSize="25sp"
            app:backgroundTint="@color/black_buttons" />

        <Button
            android:id="@+id/btn2"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_row="3"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:text="@string/button_two"
            android:textColor="@color/white"
            android:textSize="25sp"
            app:backgroundTint="@color/black_buttons" />

        <Button
            android:id="@+id/btn3"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_row="3"
            android:layout_column="2"
            android:layout_columnWeight="1"
            android:text="@string/button_tree"
            android:textColor="@color/white"
            android:textSize="25sp"
            app:backgroundTint="@color/black_buttons" />

        <Button
            android:id="@+id/btnSum"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_row="3"
            android:layout_column="4"
            android:layout_columnWeight="1"
            android:text="@string/button_sum"
            android:textColor="@color/white"
            android:textSize="25sp"
            app:backgroundTint="@color/black_buttons" />

        <!--Quinta fila -->
        <Button
            android:id="@+id/btn0"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_row="4"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:text="@string/button_zero"
            android:textColor="@color/white"
            android:textSize="25sp"
            app:backgroundTint="@color/black_buttons" />

        <Button
            android:id="@+id/btnDot"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_row="4"
            android:layout_column="1"
            android:layout_columnSpan="2"
            android:layout_columnWeight="1"
            android:text="@string/button_punto"
            android:textColor="@color/white"
            android:textSize="25sp"
            app:backgroundTint="@color/black_buttons" />


        <Button
            android:id="@+id/btnEquals"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_row="4"
            android:layout_column="4"
            android:layout_columnWeight="1"
            android:text="@string/button_equals"
            android:textColor="@color/white"
            android:textSize="25sp"
            app:backgroundTint="@color/orange" />

    </GridLayout>

</androidx.constraintlayout.widget.ConstraintLayout>